@@ -52,7 +52,6 @@ WORD colors[NUM_OF_SPACE_STATES] = {
     FOREGROUND_RED | FOREGROUND_GREEN,
     FOREGROUND_RED | FOREGROUND_BLUE | FOREGROUND_INTENSITY,
     FOREGROUND_RED | FOREGROUND_BLUE,
-    FOREGROUND_GREEN | FOREGROUND_BLUE | FOREGROUND_INTENSITY
 };
 
 short map_border_color = BORDER_COLOR;
